--- a/apps/react-coding-test/src/app/styles/global-styles.scss
+++ b/apps/react-coding-test/src/app/styles/global-styles.scss
@@ -1,6 +1,12 @@
-
 @import '~destyle.css/destyle';
 
 html {
-    font-size: 16px;
+  font-family: sans-serif;
+  font-size: 16px;
+  height: 100vh;
+}
+
+body,
+#root {
+  height: 100%;
 }
