--- a/libs/react-coding-test/feature-register-form/src/lib/containers/signup-form/signup-form.styles.scss
+++ b/libs/react-coding-test/feature-register-form/src/lib/containers/signup-form/signup-form.styles.scss
@@ -5,6 +5,16 @@
 
 .txt-input {
   margin: 5px auto 0;
+
+  &.error {
+    border: 1px solid red;
+  }
+}
+
+.input-feedback {
+  margin-top: 0.5em;
+  text-align: center;
+  color: red;
 }
 
 .btn {
@@ -15,7 +25,11 @@
   min-width: 8.62em;
   text-align: center;
   border-radius: 5px;
-  margin: 3.5em auto 0;
+  margin: 2.5em auto 0;
+
+  &:disabled {
+    background: gray;
+  }
 }
 
 .btn.gray {
@@ -24,4 +38,5 @@
 
 .loading-spinner {
   height: auto;
+  margin: 2.5em auto 0;
 }
